--- a/nbs/data_generation.ipynb
+++ b/nbs/data_generation.ipynb
@@ -25,7 +25,11 @@
     "from scipy.interpolate import interp1d\n",
     "import tskit\n",
     "from tqdm import tqdm\n",
-    "import msprime"
+    "import msprime\n",
+    "\n",
+    "from torch_geometric.utils.convert import from_networkx\n",
+    "import networkx as nx\n",
+    "import torch"
    ]
   },
   {
@@ -289,10 +293,10 @@
    "source": [
     "#| export\n",
     "\n",
-    "def generate_sample(nth_scenario):\n",
+    "def generate_sample(nth_scenario, num_trees, alpha):\n",
     "    \n",
     "    sequence_length = 1_000_000\n",
-    "    alpha = np.round(np.random.uniform(1.01, 1.99), 2)\n",
+    "    #alpha = np.round(np.random.uniform(1.01, 1.99), 2)\n",
     "    population_time , population_size = sample_smooth_population_parameters()\n",
     "   \n",
     "    parameter_set = sample_parameters(\n",
@@ -304,15 +308,16 @@
     "       model=alpha   \n",
     "    )\n",
     "\n",
+    "    num_replicates = 1\n",
     "    ts = simulate_tree_sequence(\n",
     "        parameter_set.iloc[0],\n",
     "        population_time=population_time,\n",
     "        segment_length=sequence_length,\n",
     "        num_replicates=num_replicates, \n",
-    "        seed=nth_scenario+1*1000,\n",
+    "        seed=nth_scenario+1, #+1*1000,\n",
     "    )[0]\n",
     "\n",
-    "    while ts.num_trees < 500:\n",
+    "    while ts.num_trees < num_trees:\n",
     "        sequence_length = sequence_length * 1.2\n",
     "        ts = simulate_tree_sequence(\n",
     "            parameter_set.iloc[0],\n",
@@ -360,7 +365,25 @@
    "id": "f277bc5e-2d34-4219-979b-8ef6381d6114",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#| export\n",
+    "\n",
+    "def ts_to_data_objects(ts, num_trees=500, num_embedding=60, y=None):\n",
+    "    max_num_nodes = 2 * ts.num_samples - 1\n",
+    "    data_objects = []\n",
+    "    for i, tree in enumerate(ts.trees()):\n",
+    "        if i < num_trees:\n",
+    "            data = from_networkx(nx.Graph(tree.as_dict_of_dicts()))\n",
+    "            data.edge_weight = data.branch_length \n",
+    "            data.branch_length  = None\n",
+    "            data.x = torch.eye(max_num_nodes, num_embedding)\n",
+    "            data.x[data.num_nodes:] = torch.zeros(num_embedding)\n",
+    "            data.num_nodes = max_num_nodes\n",
+    "            data.y = y\n",
+    "            data_objects.append(data)\n",
+    "    return data_objects"
+   ]
   },
   {
    "cell_type": "code",
