--- a/nbs/gnncoalv2.ipynb
+++ b/nbs/gnncoalv2.ipynb
@@ -23,7 +23,16 @@
    "execution_count": null,
    "id": "c9fd474e-b3e5-4656-ac8e-986b38da3c78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/gnncoalv2/lib/python3.11/site-packages/torch/cuda/__init__.py:107: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "import torch\n",
@@ -117,6 +126,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73ee7783-2108-4e96-9368-ecf7003286ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #| export\n",
+    "\n",
+    "# class GNN(nn.Module):\n",
+    "#     def __init__(self, in_channels, hidden_channels, out_channels, linearize=True):\n",
+    "#         super(GNN, self).__init__()\n",
+    "\n",
+    "#         self.convs = nn.ModuleList([\n",
+    "#             DenseGCNConv(in_channels, hidden_channels, improved=True),\n",
+    "#             DenseGCNConv(hidden_channels, out_channels, improved=True)\n",
+    "#         ])\n",
+    "\n",
+    "#         self.norms = nn.ModuleList([\n",
+    "#             nn.LayerNorm(hidden_channels),\n",
+    "#             nn.LayerNorm(out_channels)\n",
+    "#         ])\n",
+    "\n",
+    "#         self.linearize = linearize\n",
+    "#         if self.linearize: self.linear = nn.Linear(hidden_channels + out_channels, out_channels)\n",
+    "#         else: self.linear = None\n",
+    "        \n",
+    "\n",
+    "#     def forward(self, x, adj):\n",
+    "#         xs = []\n",
+    "#         for conv, norm in zip(self.convs, self.norms):\n",
+    "#             x = F.relu(conv(x, adj))\n",
+    "#             x = norm(x)\n",
+    "#             xs.append(x)\n",
+    "#         x = torch.cat(xs, dim=-1)\n",
+    "        \n",
+    "#         if self.linearize: return F.relu(self.linear(x))\n",
+    "#         else: return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dc9f1ab5-b52b-453f-b10c-3feab77eef2a",
    "metadata": {},
    "outputs": [],
@@ -130,7 +179,7 @@
     "        self.layers = []\n",
     "        num_nodes = ceil(0.3 * max_nodes)\n",
     "        \n",
-    "        for _ in range(2):  \n",
+    "        for _ in range(3):  \n",
     "            self.layers.append({\n",
     "                'pool': GNN(num_features, num_hidden, num_nodes),\n",
     "                'embed': GNN(num_features, num_hidden, num_hidden, linearize=False)\n",
@@ -211,7 +260,7 @@
     "\n",
     "class GNNcoalV2(nn.Module):\n",
     "    def __init__(self, max_nodes, num_features, num_hidden=64, out_dim=60,\n",
-    "                 enc_heads = 4, enc_depth=8,\n",
+    "                 enc_heads = 4, enc_depth=8, num_trees=1000\n",
     "                ):\n",
     "        super().__init__()\n",
     "\n",
@@ -222,23 +271,20 @@
     "        self.encoder = Encoder(dim=enc_dim, depth=enc_depth, heads=enc_heads,\n",
     "                               ff_glu=True, residual_attn=True, flash=True)\n",
     "\n",
+    "        self.positional_encodings = nn.Parameter(torch.randn(num_trees, enc_dim))\n",
     "        self.demography_head = MiniDenseNet(enc_dim, enc_dim//2, out_dim)\n",
-    "        self.alpha_head = MiniDenseNet(enc_dim, enc_dim//2, out_dim)\n",
     "        \n",
     "\n",
-    "        \n",
-    "\n",
-    "    def forward(self, x, adj, batch_size, num_trees=500, num_trees_for_alpha=10):\n",
+    "    def forward(self, x, adj, batch_size, num_trees=500):\n",
     "        emb, l_total, e_total = self.conv(x, adj, batch_size, num_trees)\n",
+    "        emb = emb + self.positional_encodings.unsqueeze(0)\n",
     "        emb = self.encoder(emb)    \n",
     "        \n",
-    "        demo_emb = emb.mean(dim=1)\n",
-    "        alpha_emb = mean_over_n(emb, num_trees_for_alpha)\n",
+    "        #emb = emb.sum(dim=1)\n",
+    "        #alpha_emb = mean_over_n(emb, num_trees_for_alpha)\n",
     "\n",
-    "        demography_estimate = self.demography_head(demo_emb)\n",
-    "        seq_alpha_estimate = self.alpha_head(alpha_emb)\n",
-    "        \n",
-    "        return demography_estimate, seq_alpha_estimate, l_total, e_total\n",
+    "        emb = self.demography_head(emb)\n",
+    "        return emb, l_total, e_total\n",
     "        \n",
     "\n",
     "# model = GNNcoalV2(max_nodes=19, num_features=60, num_hidden=64,  out_dim=60,\n",
@@ -298,22 +344,7 @@
    "id": "3b049e0c-29db-4bee-bc6b-f7a08825eb9f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# def ts_to_data_objects(ts, num_trees=500, num_embedding=60, y=None):\n",
-    "#     max_num_nodes = 2 * ts.num_samples - 1\n",
-    "#     data_objects = []\n",
-    "#     for i, tree in enumerate(ts.trees()):\n",
-    "#         if i < num_trees:\n",
-    "#             data = from_networkx(nx.Graph(tree.as_dict_of_dicts()))\n",
-    "#             data.edge_weight = data.branch_length \n",
-    "#             data.branch_length  = None\n",
-    "#             data.x = torch.eye(max_num_nodes, num_embedding)\n",
-    "#             data.x[data.num_nodes:] = torch.zeros(num_embedding)\n",
-    "#             data.num_nodes = max_num_nodes\n",
-    "#             data.y = y\n",
-    "#             data_objects.append(data)\n",
-    "#     return data_objects"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
