--- a/nbs/data_generation.ipynb
+++ b/nbs/data_generation.ipynb
@@ -29,7 +29,36 @@
     "\n",
     "from torch_geometric.utils.convert import from_networkx\n",
     "import networkx as nx\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "import random\n",
+    "from scipy.special import beta\n",
+    "import networkx as nx\n",
+    "from torch_geometric.loader import DataLoader\n",
+    "from torch_geometric.utils.to_dense_adj import to_dense_adj\n",
+    "from torch_geometric.utils.to_dense_batch import to_dense_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "605d626c-a8fc-4541-a5dd-e97d37e51d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "\n",
+    "def seed_everything(seed=42):\n",
+    "    \"\"\"Seed all random number generators.\"\"\"\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    \n",
+    "    # Ensure deterministic behavior (this can slow down training, so you might not always want it)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n"
    ]
   },
   {
@@ -41,7 +70,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "def sample_constant_population_size(n_min:int=10, n_max:int=100_000, num_time_windows=21) -> list[float]:\n",
+    "def sample_constant_population_size(n_min:int=10, n_max:int=100_000, num_time_windows=21):\n",
     "    return np.random.uniform(n_min, n_max, 1).tolist() * num_time_windows"
    ]
   },
@@ -54,7 +83,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "def sample_population_size(n_min:int=10, n_max:int=100_000, num_time_windows=21) -> list[float]:\n",
+    "def sample_population_size(n_min:int=10, n_max:int=100_000, num_time_windows=21):\n",
     "    \n",
     "    \"\"\"Creates random demography. Function taken from: \n",
     "    https://gitlab.inria.fr/ml_genetics/public/dlpopsize_paper\n",
@@ -84,7 +113,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
     "def get_population_time(time_rate:float=0.06, tmax:int = 130_000,\n",
     "                        num_time_windows:int = 21\n",
     "                       ) -> np.array :\n",
@@ -109,7 +137,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
     "def simulate_scenario(population_size: Union[list, np.ndarray],\n",
     "                      population_time: Union[list, np.ndarray],\n",
     "                      mutation_rate: float,\n",
@@ -148,20 +175,18 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
     "def sample_parameters(num_time_windows = 60,\n",
     "                      n_min = 10_000,\n",
     "                      n_max = 10_000_000,\n",
     "                      recombination_rates = [1e-8, 1e-8],\n",
-    "                      population_size: list[float] = None,\n",
+    "                      population_size= None,\n",
     "                      model = None,\n",
     "                      \n",
     "                      ) -> pd.DataFrame:\n",
     "    \n",
     "\n",
     "    parameter_names = [\"recombination_rate\"]\n",
-    "    for i in range(num_time_windows):\n",
-    "        parameter_names.append(\"pop_size_\" + str(i))\n",
+    "    for i in range(num_time_windows): parameter_names.append(\"pop_size_\" + str(i))\n",
     "    parameter_names.append(\"model\")\n",
     "    parameters = []\n",
     "    recombination_rate = np.random.uniform(low=recombination_rates[0], high=recombination_rates[1])\n",
@@ -188,7 +213,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "def sample_population_size(n_min:int=10, n_max:int=100_000, num_time_windows=21) -> list[float]:\n",
+    "def sample_population_size(n_min:int=10, n_max:int=100_000, num_time_windows=21):\n",
     "    \n",
     "    \"\"\"Creates random demography. Function taken from: \n",
     "    https://gitlab.inria.fr/ml_genetics/public/dlpopsize_paper\n",
@@ -218,7 +243,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
     "def sample_smooth_population_parameters():\n",
     "\n",
     "    upper_out_of_bound = lower_out_of_bound = True\n",
@@ -247,14 +271,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
     "def simulate_tree_sequence(parameters: pd.DataFrame,\n",
     "                           population_time: list, \n",
     "                           segment_length = 1e6, \n",
     "                           num_sample = 10, \n",
     "                           num_replicates = 100,\n",
     "                           seed = 69420,\n",
-    "                          ) -> list[tskit.trees.TreeSequence]:\n",
+    "                          ):\n",
     "    \n",
     "    tree_sequences = []\n",
     "    population_size = parameters.loc[\"pop_size_0\":\"pop_size_\" + str(len(population_time)-1)].tolist()\n",
@@ -266,7 +289,6 @@
     "    else:\n",
     "        model = None\n",
     "        \n",
-    "\n",
     "    tree_sequences = simulate_scenario(population_size=population_size,\n",
     "                    population_time=population_time,\n",
     "                    mutation_rate=0, # otherwise memory not sufficient\n",
@@ -275,7 +297,6 @@
     "                    num_sample=num_sample,\n",
     "                    num_replicates=num_replicates,\n",
     "                    seed=seed, model=model)\n",
-    "        \n",
     "        \n",
     "    tss = []\n",
     "    for ts in tree_sequences:\n",
@@ -292,8 +313,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
-    "def generate_sample(nth_scenario, num_trees, alpha):\n",
+    "def generate_sample(nth_scenario, num_sim_trees, alpha):\n",
     "    \n",
     "    sequence_length = 1_000_000\n",
     "    #alpha = np.round(np.random.uniform(1.01, 1.99), 2)\n",
@@ -317,14 +337,14 @@
     "        seed=nth_scenario+1, #+1*1000,\n",
     "    )[0]\n",
     "\n",
-    "    while ts.num_trees < num_trees:\n",
+    "    while ts.num_trees < num_sim_trees:\n",
     "        sequence_length = sequence_length * 1.2\n",
     "        ts = simulate_tree_sequence(\n",
     "            parameter_set.iloc[0],\n",
     "            population_time=population_time,\n",
     "            segment_length=sequence_length,\n",
     "            num_replicates=num_replicates, \n",
-    "            seed=nth_scenario+1*1000,\n",
+    "            seed=nth_scenario+1,\n",
     "        )[0]\n",
     "\n",
     "    return ts, population_size, alpha"
@@ -339,25 +359,68 @@
    "source": [
     "#| export\n",
     "\n",
-    "def alternative_coalescent_mask(ts, population_time, x_times_std=2, n_trees=500):\n",
+    "# def alternative_coalescent_mask(ts, population_time, x_times_std=2, n_trees=500):\n",
     "    \n",
-    "    trees = ts.aslist()[0:n_trees]\n",
+    "#     trees = ts.aslist()[0:n_trees]\n",
+    "#     nodes_n_trees = []\n",
+    "#     for tree in trees:\n",
+    "#         nodes_n_trees += list(tree.nodes())\n",
+    "    \n",
+    "#     node_times = [ts.get_time(node.id) for node in ts.nodes() if node.id >= ts.num_samples and node.id in nodes_n_trees]\n",
+    "    \n",
+    "#     log_node_times = np.log(node_times)\n",
+    "#     mean = log_node_times.mean()\n",
+    "#     std = log_node_times.std()\n",
+    "#     lowerbound = np.exp(mean-x_times_std*std)\n",
+    "#     upperbound = np.exp(mean+x_times_std*std)\n",
+    "#     mask1 = population_time > lowerbound\n",
+    "#     mask2 = population_time < upperbound\n",
+    "#     mask = np.logical_and(mask1, mask2)\n",
+    "#     return mask\n",
+    "\n",
+    "\n",
+    "def alternative_coalescent_mask(ts, population_time, threshold=10, num_sim_trees=500, nth_tree=1):\n",
+    "    \n",
+    "    #trees = ts.aslist()[0:num_sim_trees:nth_tree]\n",
     "    nodes_n_trees = []\n",
-    "    for tree in trees:\n",
-    "        nodes_n_trees += list(tree.nodes())\n",
+    "    #for tree in trees: \n",
+    "    #    nodes_n_trees += list(tree.nodes())\n",
+    "\n",
+    "    for i, tree in enumerate(ts.trees()):\n",
+    "        if i < num_sim_trees and i % nth_tree == 0:\n",
+    "            nodes_n_trees += list(tree.nodes())\n",
     "    \n",
+    "        \n",
     "    node_times = [ts.get_time(node.id) for node in ts.nodes() if node.id >= ts.num_samples and node.id in nodes_n_trees]\n",
+    "    hist, bin_edges = np.histogram(node_times, bins=population_time)\n",
+    "\n",
+    "    mask = np.zeros(60) != 0\n",
+    "    mask[1:] = hist > threshold\n",
     "    \n",
-    "    log_node_times = np.log(node_times)\n",
-    "    mean = log_node_times.mean()\n",
-    "    std = log_node_times.std()\n",
-    "    lowerbound = np.exp(mean-x_times_std*std)\n",
-    "    upperbound = np.exp(mean+x_times_std*std)\n",
-    "    mask1 = population_time > lowerbound\n",
-    "    mask2 = population_time < upperbound\n",
-    "    mask = np.logical_and(mask1, mask2)\n",
+    "    start = np.argwhere(mask == 1)[0]\n",
+    "    end = np.argwhere(mask == 1)[-1]\n",
+    "    mask[int(start):int(end+1)] = True\n",
     "    return mask"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe44b91c-6748-4b92-b1ae-6f0f70b79f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -366,14 +429,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#| export\n",
     "\n",
-    "def ts_to_data_objects(ts, num_trees=500, num_embedding=60, y=None):\n",
+    "def ts_to_data_objects(ts, num_sim_trees=500, nth_tree=1, num_embedding=60, y=None):\n",
     "    max_num_nodes = 2 * ts.num_samples - 1\n",
     "    data_objects = []\n",
+    "    \n",
+    "    #trees = ts.aslist()[0:num_sim_trees:nth_tree]\n",
     "    for i, tree in enumerate(ts.trees()):\n",
-    "        if i < num_trees:\n",
+    "        if i < num_sim_trees and i % nth_tree == 0:\n",
+    "            \n",
     "            data = from_networkx(nx.Graph(tree.as_dict_of_dicts()))\n",
     "            data.edge_weight = data.branch_length \n",
     "            data.branch_length  = None\n",
@@ -383,6 +448,134 @@
     "            data.y = y\n",
     "            data_objects.append(data)\n",
     "    return data_objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ba8078-668a-47ad-924f-155e25d07b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "\n",
+    "def calculate_beta_coal_ne_estimate(theta, sample_size, L, alpha, mu_real):\n",
+    "    mu_estimated = theta / ((2*np.sum(1/np.array(range(1, sample_size)))) * L)\n",
+    "    m = 1 + (1/((2**(alpha-1))*(alpha-1)))\n",
+    "    scale = (m**alpha)/(alpha * beta(2-alpha,alpha))\n",
+    "    Ne = (((mu_estimated/mu_real)/scale)**(1/(alpha-1)))\n",
+    "    return Ne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7d72b1-ff0c-4b23-b238-c0d11a2d98c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def generate_batch(\n",
+    "    seed, alpha, batch_size, num_trees, num_sim_trees, nth_tree=1, scaling=\"log\", mutation_rate = 4e-8):\n",
+    "\n",
+    "    tss, demographies, alphas = zip(*[generate_sample(seed+i, num_sim_trees, alpha) for i in range(batch_size)])\n",
+    "    demographies = np.array(demographies)\n",
+    "\n",
+    "\n",
+    "    # based on num_sim_trees\n",
+    "    tss = [msprime.mutate(ts, rate=mutation_rate) for ts in tss]\n",
+    "    ne_norm_factors = [calculate_beta_coal_ne_estimate(ts.num_mutations,\n",
+    "                                                     ts.sample_size, ts.sequence_length,\n",
+    "                                                      alphas[i], mutation_rate) for i, ts in enumerate(tss)]\n",
+    "    #ne_norm_factors = demographies.mean(1)\n",
+    "        \n",
+    "    population_time, _ = sample_smooth_population_parameters()\n",
+    "    masks = [alternative_coalescent_mask(ts, population_time, num_sim_trees=num_sim_trees, threshold=10, nth_tree=nth_tree) for ts in tss]\n",
+    "    \n",
+    "    data_objects = []\n",
+    "    for i, ts in enumerate(tss):\n",
+    "        ne_norm_factor = ne_norm_factors[i]\n",
+    "        ts_data_objects = ts_to_data_objects(ts, num_sim_trees=num_sim_trees,nth_tree=nth_tree, num_embedding=60)\n",
+    "\n",
+    "        \n",
+    "        if scaling==\"log\": demographies[i] = np.log(demographies[i])\n",
+    "        if scaling==\"log_ne\": demographies[i] = np.log(demographies[i] / ne_norm_factor)\n",
+    "        if scaling==\"ne\": demographies[i] = demographies[i] / ne_norm_factor\n",
+    "\n",
+    "        \n",
+    "        for data_object in ts_data_objects: \n",
+    "            if scaling==\"log\": data_object.edge_weight = np.log(data_object.edge_weight)\n",
+    "            if scaling==\"log_ne\": data_object.edge_weight = np.log(data_object.edge_weight  / ne_norm_factor)\n",
+    "            if scaling==\"ne\": data_object.edge_weight = data_object.edge_weight  / ne_norm_factor\n",
+    "                \n",
+    "        data_objects += ts_data_objects    \n",
+    "    \n",
+    "    dl = DataLoader(data_objects, batch_size=num_trees*batch_size)\n",
+    "\n",
+    "    \n",
+    "    batch = next(iter(dl))\n",
+    "    adj_batch = to_dense_adj(batch.edge_index, batch=batch.batch,\n",
+    "                        edge_attr=batch.edge_weight, max_num_nodes=None)\n",
+    "    \n",
+    "    x_batch, _ = to_dense_batch(batch.x, batch.batch)\n",
+    "\n",
+    "    masks_batch = torch.Tensor(np.array(masks))\n",
+    "    alpha_batch = torch.Tensor(alphas)\n",
+    "    demography_batch = torch.Tensor(demographies)\n",
+    "    ne_norm_factors = torch.Tensor(ne_norm_factors)\n",
+    "    \n",
+    "    return x_batch, adj_batch, masks_batch, demography_batch, alpha_batch, ne_norm_factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d9a351-4adf-401f-8b75-b55f2a90a589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "\n",
+    "def continously_add_batch_to_queue(\n",
+    "    data_queue,\n",
+    "    process_id,\n",
+    "    num_processes,\n",
+    "    seed_start_value,\n",
+    "    num_trees = 1000,\n",
+    "    num_sim_trees = 1000,\n",
+    "    nth_tree = 1,\n",
+    "    batch_size = 4,\n",
+    "    scaling=\"log\",\n",
+    "    mutation_rate = 4e-8\n",
+    "):\n",
+    "    \n",
+    "    while True:\n",
+    "        seed_value = process_id + seed_start_value\n",
+    "        device = None\n",
+    "        alpha = np.round(np.random.uniform(1.01, 1.99), 2)\n",
+    "        try:\n",
+    "            x_batch, adj_batch, masks_batch, demography_batch, alpha_batch, ne_norm_factors = generate_batch(\n",
+    "                seed_value, alpha, batch_size=batch_size, num_trees=num_trees,num_sim_trees=num_sim_trees,\n",
+    "                nth_tree=nth_tree, scaling=scaling, mutation_rate=mutation_rate)\n",
+    "            data_point = [x_batch, adj_batch, masks_batch, demography_batch, alpha_batch]\n",
+    "            data_queue.put(data_point)\n",
+    "            seed_value += num_processes\n",
+    "        except Exception as e:\n",
+    "            print(e, seed_value, alpha)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dc88cda-d90c-43b7-9305-0913a3ea3c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def get_next_batch(data_queue): return data_queue.get()"
    ]
   },
   {
