--- a/nbs/gnncoalv2.ipynb
+++ b/nbs/gnncoalv2.ipynb
@@ -176,14 +176,16 @@
     "    def __init__(self, max_nodes, num_features, num_hidden=64):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.layers = []\n",
+    "        self.layers = nn.ModuleList([])\n",
     "        num_nodes = ceil(0.3 * max_nodes)\n",
     "        \n",
-    "        for _ in range(3):  \n",
-    "            self.layers.append({\n",
+    "        for _ in range(3):\n",
+    "            layer = nn.ModuleDict({\n",
     "                'pool': GNN(num_features, num_hidden, num_nodes),\n",
     "                'embed': GNN(num_features, num_hidden, num_hidden, linearize=False)\n",
     "            })\n",
+    "            self.layers.append(layer)\n",
+    "            \n",
     "            num_features = 3 * num_hidden\n",
     "            num_nodes = ceil(0.3 * num_nodes)\n",
     "            \n",
