--- a/nbs/data_generation.ipynb
+++ b/nbs/data_generation.ipynb
@@ -379,6 +379,26 @@
     "#     return mask\n",
     "\n",
     "\n",
+    "def mask_smaller_fragments(arr):\n",
+    "    # Find changes in value\n",
+    "    changes = np.diff(np.insert(arr.astype(int), [0, len(arr)], [0, 0]))\n",
+    "    # Find the start and end indices of stretches of True values\n",
+    "    start_indices = np.where(changes == 1)[0]\n",
+    "    end_indices = np.where(changes == -1)[0]\n",
+    "    # If there are no stretches of True values, return the original array\n",
+    "    if len(start_indices) == 0 or len(end_indices) == 0:\n",
+    "        return arr\n",
+    "    # Find the longest stretch\n",
+    "    lengths = end_indices - start_indices\n",
+    "    longest_index = np.argmax(lengths)\n",
+    "    # Create a mask of all False values\n",
+    "    mask = np.zeros_like(arr, dtype=bool)\n",
+    "    # Set the longest stretch to True in the mask\n",
+    "    mask[start_indices[longest_index]:end_indices[longest_index]] = True\n",
+    "    return mask\n",
+    "\n",
+    "\n",
+    "\n",
     "def alternative_coalescent_mask(ts, population_time, threshold=10, num_sim_trees=500, nth_tree=1):\n",
     "    \n",
     "    #trees = ts.aslist()[0:num_sim_trees:nth_tree]\n",
@@ -396,10 +416,12 @@
     "\n",
     "    mask = np.zeros(60) != 0\n",
     "    mask[1:] = hist > threshold\n",
+    "\n",
+    "    mask = mask_smaller_fragments(mask)\n",
     "    \n",
-    "    start = np.argwhere(mask == 1)[0]\n",
-    "    end = np.argwhere(mask == 1)[-1]\n",
-    "    mask[int(start):int(end+1)] = True\n",
+    "    #start = np.argwhere(mask == 1)[0]\n",
+    "    #end = np.argwhere(mask == 1)[-1]\n",
+    "    #mask[int(start):int(end+1)] = True\n",
     "    return mask"
    ]
   },
@@ -408,18 +430,7 @@
    "execution_count": null,
    "id": "fe44b91c-6748-4b92-b1ae-6f0f70b79f0f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -447,7 +458,62 @@
     "            data.num_nodes = max_num_nodes\n",
     "            data.y = y\n",
     "            data_objects.append(data)\n",
-    "    return data_objects"
+    "    return data_objects\n",
+    "\n",
+    "\n",
+    "# def ts_to_data_objects(ts, num_sim_trees=500, nth_tree=1, num_embedding=60, y=None):\n",
+    "#     max_num_nodes = 2 * ts.num_samples - 1\n",
+    "#     data_objects = []\n",
+    "    \n",
+    "#     #trees = ts.aslist()[0:num_sim_trees:nth_tree]\n",
+    "#     for i, tree in enumerate(ts.trees()):\n",
+    "#         if i < num_sim_trees and i % nth_tree == 0:\n",
+    "            \n",
+    "#             data = from_networkx(nx.Graph(tree.as_dict_of_dicts()))\n",
+    "#             data.edge_weight = data.branch_length \n",
+    "#             data.branch_length  = None\n",
+    "            \n",
+    "#             data.x = torch.ones(max_num_nodes, num_embedding)\n",
+    "#             #data.x[data.num_nodes:] = torch.zeros(num_embedding)\n",
+    "\n",
+    "#             tree_times = torch.tensor([ts.get_time(node) if node < ts.num_samples else np.log(ts.get_time(node)) for node in tree.nodes()]) \n",
+    "#             x = torch.repeat_interleave(tree_times.view(-1, 1), repeats=num_embedding, dim=1)\n",
+    "#             x = x / 10\n",
+    "#             data.x[0:x.shape[0], 0:x.shape[1]] = x\n",
+    "\n",
+    "            \n",
+    "            \n",
+    "#             data.num_nodes = max_num_nodes\n",
+    "#             data.y = y\n",
+    "#             data_objects.append(data)\n",
+    "#     return data_objects\n",
+    "\n",
+    "# def ts_to_data_objects(ts, num_sim_trees=500, nth_tree=1, num_embedding=60, y=None):\n",
+    "#     max_num_nodes = 2 * ts.num_samples - 1\n",
+    "#     data_objects = []\n",
+    "    \n",
+    "#     #trees = ts.aslist()[0:num_sim_trees:nth_tree]\n",
+    "#     for i, tree in enumerate(ts.trees()):\n",
+    "#         if i < num_sim_trees and i % nth_tree == 0:\n",
+    "            \n",
+    "#             data = from_networkx(nx.Graph(tree.as_dict_of_dicts()))\n",
+    "#             data.edge_weight = data.branch_length \n",
+    "#             data.branch_length  = None\n",
+    "            \n",
+    "#             #data.x = torch.eye(max_num_nodes, num_embedding)\n",
+    "#             #data.x[data.num_nodes:] = torch.zeros(num_embedding)\n",
+    "\n",
+    "#             tree_times = torch.tensor([ts.get_time(node) for node in tree.nodes()]) \n",
+    "#             #value = torch.empty(1).uniform_(1e-7, 1e-6).item()\n",
+    "#             x = torch.diag(tree_times) #+ value\n",
+    "#             emb = torch.zeros(max_num_nodes, num_embedding)\n",
+    "#             emb[0:x.shape[0], 0:x.shape[1]] = x\n",
+    "#             data.x = emb\n",
+    "            \n",
+    "#             data.num_nodes = max_num_nodes\n",
+    "#             data.y = y\n",
+    "#             data_objects.append(data)\n",
+    "#     return data_objects"
    ]
   },
   {
@@ -485,10 +551,11 @@
     "\n",
     "    # based on num_sim_trees\n",
     "    tss = [msprime.mutate(ts, rate=mutation_rate) for ts in tss]\n",
-    "    ne_norm_factors = [calculate_beta_coal_ne_estimate(ts.num_mutations,\n",
-    "                                                     ts.sample_size, ts.sequence_length,\n",
-    "                                                      alphas[i], mutation_rate) for i, ts in enumerate(tss)]\n",
-    "    #ne_norm_factors = demographies.mean(1)\n",
+    "    #ne_norm_factors = [calculate_beta_coal_ne_estimate(ts.num_mutations,\n",
+    "    #                                                 ts.sample_size, ts.sequence_length,\n",
+    "    #                                                  alphas[i], mutation_rate) for i, ts in enumerate(tss)]\n",
+    "    \n",
+    "    ne_norm_factors = demographies.mean(1)\n",
     "        \n",
     "    population_time, _ = sample_smooth_population_parameters()\n",
     "    masks = [alternative_coalescent_mask(ts, population_time, num_sim_trees=num_sim_trees, threshold=10, nth_tree=nth_tree) for ts in tss]\n",
@@ -508,7 +575,10 @@
     "            if scaling==\"log\": data_object.edge_weight = np.log(data_object.edge_weight)\n",
     "            if scaling==\"log_ne\": data_object.edge_weight = np.log(data_object.edge_weight  / ne_norm_factor)\n",
     "            if scaling==\"ne\": data_object.edge_weight = data_object.edge_weight  / ne_norm_factor\n",
-    "                \n",
+    "\n",
+    "            if scaling==\"log\": data_object.x = np.log(data_object.x+1)\n",
+    "            if scaling==\"log_ne\": data_object.x = np.log((data_object.x+1)  / ne_norm_factor)\n",
+    "            if scaling==\"ne\": data_object.x = data_object.x  / ne_norm_factor\n",
     "        data_objects += ts_data_objects    \n",
     "    \n",
     "    dl = DataLoader(data_objects, batch_size=num_trees*batch_size)\n",
@@ -562,8 +632,7 @@
     "            data_queue.put(data_point)\n",
     "            seed_value += num_processes\n",
     "        except Exception as e:\n",
-    "            print(e, seed_value, alpha)\n",
-    "\n"
+    "            print(e, seed_value, alpha)\n"
    ]
   },
   {
@@ -635,9 +704,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
