--- a/nbs/gnncoal.ipynb
+++ b/nbs/gnncoal.ipynb
@@ -248,13 +248,111 @@
     "                                            \n",
     "        return x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eacb534-bf8c-4756-ad10-3940cbc9bd4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8ad85ab-f166-4ab5-bee2-99c171622bdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "#torch.Tensor(0)\n",
+    "\n",
+    "            \n",
+    "class DiffPoolNetV3(torch.nn.Module):\n",
+    "    def __init__(self, max_nodes, num_features, num_hidden=64, out_channels=60, num_trees=500, enc_depth=12, enc_heads=8, track_running_stats=True):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        num_nodes = ceil(0.7 * max_nodes)\n",
+    "        self.gnn1_pool = GNN(num_features, num_hidden, num_nodes, track_running_stats=track_running_stats)\n",
+    "        self.gnn1_embed = GNN(num_features, num_hidden, num_hidden, lin=False, track_running_stats=track_running_stats)\n",
+    "\n",
+    "        num_nodes = ceil(0.6 * num_nodes)\n",
+    "        self.gnn2_pool = GNN(3 * num_hidden, num_hidden, num_nodes, track_running_stats=track_running_stats)\n",
+    "        self.gnn2_embed = GNN(3 * num_hidden, num_hidden, num_hidden, lin=False, track_running_stats=track_running_stats)\n",
+    "        \n",
+    "        num_nodes = ceil(0.5 * num_nodes)\n",
+    "        self.gnn3_pool = GNN(3 * num_hidden, num_hidden, num_nodes, track_running_stats=track_running_stats)\n",
+    "        self.gnn3_embed = GNN(3 * num_hidden, num_hidden, num_hidden, lin=False, track_running_stats=track_running_stats)\n",
+    "        \n",
+    "\n",
+    "        self.gnn4_embed = GNN(3 * num_hidden, num_hidden, num_hidden, lin=False, track_running_stats=track_running_stats)\n",
+    "\n",
+    "        enc_dim = num_hidden * 3\n",
+    "        self.encoder = Encoder(dim=enc_dim, depth=enc_depth, heads=enc_heads,\n",
+    "                               ff_glu=True, residual_attn=True, flash=True)\n",
+    "\n",
+    "        self.positional_encodings = nn.Parameter(torch.randn(num_trees, enc_dim))\n",
+    "        self.demography_head = MiniDenseNet(enc_dim, enc_dim//2, out_channels)\n",
+    "\n",
+    "    def forward(self, x, adj, batch_size, num_trees=500):\n",
+    "        \n",
+    "        s = self.gnn1_pool(x, adj)\n",
+    "        x = self.gnn1_embed(x, adj)\n",
+    "        x, adj, l1, e1 = dense_diff_pool(x, adj, s)\n",
+    "         \n",
+    "        s = self.gnn2_pool(x, adj)\n",
+    "        x = self.gnn2_embed(x, adj)\n",
+    "        x, adj, l2, e2 = dense_diff_pool(x, adj, s)\n",
+    "\n",
+    "        s = self.gnn3_pool(x, adj)\n",
+    "        x = self.gnn3_embed(x, adj)\n",
+    "        x, adj, l3, e3 = dense_diff_pool(x, adj, s)\n",
+    "        \n",
+    "        x = self.gnn4_embed(x, adj)\n",
+    "        x = x.sum(dim=1)\n",
+    "        x = x.view(batch_size, num_trees, x.shape[-1])\n",
+    "        x = x + self.positional_encodings.unsqueeze(0)\n",
+    "        x = self.encoder(x)  \n",
+    "        x = x.sum(dim=1)\n",
+    "        x = self.demography_head(x)\n",
+    "                                            \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe4dfe1e-f30d-45cf-a476-bf8d82579810",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa69455-3dc6-4e7c-9cab-5c9a60ccecd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
